--- a/index.html
+++ b/index.html
@@ -6,35 +6,36 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="site-information">
-        <a href="index.html">Техномарт</a>
+      <section class="main-header-top">
+        <h2 class="visually-hidden">Управление корзиной, закладками и поиском</h2>
+        <a href="index.html" class="logo header-logo">Техномарт</a>
         <form class="search-form">
           <input type="search" class="search-field" name="search" value="Поиск">
         </form>
         <span>Закладки: 0</span>
         <span>Корзина: 0</span>
         <a href="order.html" class="button order-button">Оформить заказ</a>
-      </div>
-      <div class="about-us">
+      </section>
+      <section class="main-header-middle">
         <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-        <p class="contacts">
+        <p class="main-header-contacts">
           <span>+7 (812) 555-05-55</span>
           <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
         </p>
-      </div>
-      <div class="user-navigation">
-        <a class="button sign-in-button">Войти</a>
-        <a class="button sign-up-button">Регистрация</a>
-      </div>
+        <div class="user-authorization">
+          <a class="button sign-in-button">Войти</a>
+          <a class="button sign-up-button">Регистрация</a>
+        </div>
+      </section>
       <nav class="main-navigation">
         <ul class="site-navigation">
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="company.html">Компания</a></li>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="news.html">Новости</a></li>
-          <li><a href="special.html">Спецпредложения</a></li>
-          <li><a href="delivery.html">Доставка</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>
@@ -54,19 +55,15 @@
             <a href="#" class="button offers-item-button">Для стройки</a>
           </li>
           <li class="offers-item offers-item-slider">
-            <ul class="slider-block">
-              <li class="slider-block-item drill">
-                <p>
-                  <h3>Дрели</h3>
-                  <span>Соседям на радость!</span>
-                </p>
+            <ul class="slider">
+              <li class="slider-item drill">
+                <h3>Дрели</h3>
+                <span>Соседям на радость!</span>
                 <a href="catalog.html" class="button slider-item-button">Открыть каталог</a>
               </li>
-              <li class="slider-block-item puncher">
-                <p>
-                  <h3>Перфораторы</h3>
-                  <span>Настоящие мужские игрушки</span>
-                </p>
+              <li class="slider-item puncher">
+                <h3>Перфораторы</h3>
+                <span>Настоящие мужские игрушки</span>
                 <a href="catalog.html" class="button slider-item-button">Открыть каталог</a>
               </li>
             </ul>
@@ -163,8 +160,8 @@
       <section class="service">
         <h2>Сервисы</h2>
         <p>
-          <span>Хороший интернет-магазин отличается от плохого не только ценами!</span>
-          <span>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</span>
+          Хороший интернет-магазин отличается от плохого не только ценами!
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
         </p>
         <ul class="service-list">
           <li class="service-item">
@@ -205,13 +202,12 @@
           <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
             строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
           <p>Мы можем доставить ваш товар в самые отдаленные точки России!
-            Техномарт работает со многими транспортными компаниями:
-            <ul class="transport-company-list">
-              <li>Деловые линии</li>
-              <li>Автотрейдинг</li>
-              <li>ЖелДорЭкспедиция</li>
-            </ul>
-          </p>
+            Техномарт работает со многими транспортными компаниями:</p>
+          <ul class="transport-company-list">
+            <li>Деловые линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+          </ul>
           <a href="#" class="button">Подробнее о компании</a>
         </div>
         <div class="company-contacts">
@@ -224,32 +220,34 @@
       </section>
       <footer class="main-footer">
         <section class="main-footer-top">
-          <span class="button">Техномарт</span>
+          <h2 class="visually-hidden">Нижнее меню сайта и контактная информация</h2>
+          <span class="logo footer-logo">Техномарт</span>
           <p class="main-footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
             +7 (812) 555-05-55</p>
-          <nav class="main-footer-navigation">
-            <ul class="footer-navigation-top">
-              <li class="footer-navigation-top-item"><a href="company.html">Компания</a></li>
-              <li class="footer-navigation-top-item"><a href="news.html">Новости</a></li>
-              <li class="footer-navigation-top-item"><a href="catalog.html">Каталог</a></li>
-              <li class="footer-navigation-top-item"><a href="delivery.html">Доставка</a></li>
-              <li class="footer-navigation-top-item"><a href="contacts.html">Контакты</a></li>
-            </ul>
-            <ul class="footer-navigation-bottom">
-              <li class="footer-navigation-bottom-item"><a href="material.html">Материалы</a></li>
-              <li class="footer-navigation-bottom-item"><a href="technic.html">Техника</a></li>
-              <li class="footer-navigation-bottom-item"><a href="tool.html">Инструмент</a></li>
-              <li class="footer-navigation-bottom-item"><a href="special-offers.html">Спецпредложения</a></li>
-            </ul>
-          </nav>
+            <nav class="main-footer-navigation">
+              <ul class="footer-navigation-top">
+                <li class="footer-navigation-top-item"><a href="#">Компания</a></li>
+                <li class="footer-navigation-top-item"><a href="#">Новости</a></li>
+                <li class="footer-navigation-top-item"><a href="catalog.html">Каталог</a></li>
+                <li class="footer-navigation-top-item"><a href="#">Доставка</a></li>
+                <li class="footer-navigation-top-item"><a href="#">Контакты</a></li>
+              </ul>
+              <ul class="footer-navigation-bottom">
+                <li class="footer-navigation-bottom-item"><a href="#">Материалы</a></li>
+                <li class="footer-navigation-bottom-item"><a href="#">Техника</a></li>
+                <li class="footer-navigation-bottom-item"><a href="#">Инструмент</a></li>
+                <li class="footer-navigation-bottom-item"><a href="#">Спецпредложения</a></li>
+              </ul>
+            </nav>
         </section>
         <section class="main-footer-bottom">
+          <h2 class="visually-hidden">Контактная информация</h2>
           <p class="main-footer-copyright">© 2010–2019 Компания «Техномарт»
             Все права защищены</p>
           <ul class="social-link-list">
-            <li class="social-link-item social-link-item-vk"><a href="vk.com/technomart">VK</a></li>
-            <li class="social-link-item social-link-item-facebook"><a href="fb.com/technomart">Fb</a></li>
-            <li class="social-link-item social-link-item-instagram"><a href="instagram.com/technomart">Insta</a></li>
+            <li class="social-link-item social-link-vk"><a href="vk.com/technomart">VK</a></li>
+            <li class="social-link-item social-link-facebook"><a href="fb.com/technomart">Fb</a></li>
+            <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart">Insta</a></li>
           </ul>
           <p class="main-footer-email">Обратная связь:
             mail@htmlacademy.ru</p>
