--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <header class="main-header">
       <section class="main-header-top">
         <h2 class="visually-hidden">Управление корзиной, закладками и поиском</h2>
-        <a href="index.html" class="logo header-logo">Техномарт</a>
+        <a href="#" class="logo header-logo">Техномарт</a>
         <form class="search-form">
           <input type="search" class="search-field" name="search" value="Поиск">
         </form>
         <span>Закладки: 0</span>
-        <span>Корзина: 0</span>
-        <a href="order.html" class="button order-button">Оформить заказ</a>
+        <span class="cart">Корзина: 0</span>
+        <a href="#" class="button order-button">Оформить заказ</a>
       </section>
       <section class="main-header-middle">
         <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
@@ -83,26 +83,26 @@
           <h2>Популярные товары:</h2>
           <a href="#" class="button popular-products-button">Все популярные товары</a>
         </header>
-        <ul class="popular-products-list">
-          <li class="popular-products-item">
+        <ul class="catalog-list">
+          <li class="catalog-list-item">
             <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
             <h3>Перфоратор BOSCH BFG 9000</h3>
             <span class="last-price">32500 Р.</span>
             <span class="current-price">25500 Р.</span>
           </li>
-          <li class="popular-products-item">
+          <li class="catalog-list-item">
             <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="last-price">22500 Р.</span>
             <span class="current-price">15500 Р.</span>
           </li>
-          <li class="popular-products-item">
+          <li class="catalog-list-item">
             <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="last-price">30500 Р.</span>
             <span class="current-price">25500 Р.</span>
           </li>
-          <li class="popular-products-item">
+          <li class="catalog-list-item">
             <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="current-price">12500 Р.</span>
@@ -218,43 +218,43 @@
           <a href="#" class="button">Заблудились? Напишите нам!</a>
         </div>
       </section>
-      <footer class="main-footer">
-        <section class="main-footer-top">
-          <h2 class="visually-hidden">Нижнее меню сайта и контактная информация</h2>
-          <span class="logo footer-logo">Техномарт</span>
-          <p class="main-footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-            +7 (812) 555-05-55</p>
-            <nav class="main-footer-navigation">
-              <ul class="footer-navigation-top">
-                <li class="footer-navigation-top-item"><a href="#">Компания</a></li>
-                <li class="footer-navigation-top-item"><a href="#">Новости</a></li>
-                <li class="footer-navigation-top-item"><a href="catalog.html">Каталог</a></li>
-                <li class="footer-navigation-top-item"><a href="#">Доставка</a></li>
-                <li class="footer-navigation-top-item"><a href="#">Контакты</a></li>
-              </ul>
-              <ul class="footer-navigation-bottom">
-                <li class="footer-navigation-bottom-item"><a href="#">Материалы</a></li>
-                <li class="footer-navigation-bottom-item"><a href="#">Техника</a></li>
-                <li class="footer-navigation-bottom-item"><a href="#">Инструмент</a></li>
-                <li class="footer-navigation-bottom-item"><a href="#">Спецпредложения</a></li>
-              </ul>
-            </nav>
-        </section>
-        <section class="main-footer-bottom">
-          <h2 class="visually-hidden">Контактная информация</h2>
-          <p class="main-footer-copyright">© 2010–2019 Компания «Техномарт»
-            Все права защищены</p>
-          <ul class="social-link-list">
-            <li class="social-link-item social-link-vk"><a href="vk.com/technomart">VK</a></li>
-            <li class="social-link-item social-link-facebook"><a href="fb.com/technomart">Fb</a></li>
-            <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart">Insta</a></li>
-          </ul>
-          <p class="main-footer-email">Обратная связь:
-            mail@htmlacademy.ru</p>
-          <p class="main-footer-developer">Разработано —
-            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-        </section>
-      </footer>
     </main>
+    <footer class="main-footer">
+      <section class="main-footer-top">
+        <h2 class="visually-hidden">Нижнее меню сайта и контактная информация</h2>
+        <span class="logo footer-logo">Техномарт</span>
+        <p class="main-footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          +7 (812) 555-05-55</p>
+          <nav class="main-footer-navigation">
+            <ul class="footer-navigation-top">
+              <li class="footer-navigation-top-item"><a href="#">Компания</a></li>
+              <li class="footer-navigation-top-item"><a href="#">Новости</a></li>
+              <li class="footer-navigation-top-item"><a href="catalog.html">Каталог</a></li>
+              <li class="footer-navigation-top-item"><a href="#">Доставка</a></li>
+              <li class="footer-navigation-top-item"><a href="#">Контакты</a></li>
+            </ul>
+            <ul class="footer-navigation-bottom">
+              <li class="footer-navigation-bottom-item"><a href="#">Материалы</a></li>
+              <li class="footer-navigation-bottom-item"><a href="#">Техника</a></li>
+              <li class="footer-navigation-bottom-item"><a href="#">Инструмент</a></li>
+              <li class="footer-navigation-bottom-item"><a href="#">Спецпредложения</a></li>
+            </ul>
+          </nav>
+      </section>
+      <section class="main-footer-bottom">
+        <h2 class="visually-hidden">Контактная информация</h2>
+        <p class="main-footer-copyright">© 2010–2019 Компания «Техномарт»
+          Все права защищены</p>
+        <ul class="social-link-list">
+          <li class="social-link-item social-link-vk"><a href="vk.com/technomart">VK</a></li>
+          <li class="social-link-item social-link-facebook"><a href="fb.com/technomart">Fb</a></li>
+          <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart">Insta</a></li>
+        </ul>
+        <p class="main-footer-email">Обратная связь:
+          mail@htmlacademy.ru</p>
+        <p class="main-footer-developer">Разработано —
+          <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+      </section>
+    </footer>
   </body>
 </html>
