--- a/catalog.html
+++ b/catalog.html
@@ -68,7 +68,7 @@
         </div>
         <ul class="catalog-list">
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="last-price">22500 Р.</span>
             <span class="current-price">15500 Р.</span>
@@ -76,7 +76,7 @@
             <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="last-price">30500 Р.</span>
             <span class="current-price">25500 Р.</span>
@@ -84,14 +84,14 @@
             <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="current-price">12500 Р.</span>
             <button class="button buy-item-button" type="button">Купить</button>
             <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="last-price">22500 Р.</span>
             <span class="current-price">15500 Р.</span>
@@ -99,7 +99,7 @@
             <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="last-price">30500 Р.</span>
             <span class="current-price">25500 Р.</span>
@@ -107,14 +107,14 @@
             <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="current-price">12500 Р.</span>
             <button class="button buy-item-button" type="button">Купить</button>
             <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="last-price">22500 Р.</span>
             <span class="current-price">15500 Р.</span>
@@ -122,7 +122,7 @@
             <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="last-price">30500 Р.</span>
             <span class="current-price">25500 Р.</span>
@@ -130,7 +130,7 @@
             <button class="button bookmark-item-button" type="button">В закладки</button>
           </li>
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="current-price">12500 Р.</span>
             <button class="button buy-item-button" type="button">Купить</button>
