--- a/index.html
+++ b/index.html
@@ -85,25 +85,25 @@
         </header>
         <ul class="catalog-list">
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+            <img src="img/bfg-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
             <h3>Перфоратор BOSCH BFG 9000</h3>
             <span class="last-price">32500 Р.</span>
             <span class="current-price">25500 Р.</span>
           </li>
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="last-price">22500 Р.</span>
             <span class="current-price">15500 Р.</span>
           </li>
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="last-price">30500 Р.</span>
             <span class="current-price">25500 Р.</span>
           </li>
           <li class="catalog-list-item">
-            <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="current-price">12500 Р.</span>
           </li>
@@ -117,42 +117,42 @@
         <ul class="popular-brands-list">
           <li class="popular-brands-item">
             <a href="#">
-              <img src="http://placehold.it/126x37" width="126" height="37" alt="BOSCH">
+              <img src="img/Bosch.jpg" width="126" height="37" alt="BOSCH">
             </a>
           </li>
           <li class="popular-brands-item">
             <a href="#">
-              <img src="http://placehold.it/123x40" width="123" height="40" alt="Makita">
+              <img src="img/Makita.jpg" width="123" height="40" alt="Makita">
             </a>
           </li>
           <li class="popular-brands-item">
             <a href="#">
-              <img src="http://placehold.it/146x44" width="146" height="44" alt="DeWalt">
+              <img src="img/DeWALT.jpg" width="146" height="44" alt="DeWalt">
             </a>
           </li>
           <li class="popular-brands-item">
             <a href="#">
-              <img src="http://placehold.it/200x88" width="200" height="88" alt="Интерскол">
+              <img src="img/Interscol.jpg" width="200" height="88" alt="Интерскол">
             </a>
           </li>
           <li class="popular-brands-item">
             <a href="#">
-              <img src="http://placehold.it/169x31" width="169" height="31" alt="HITACHI">
+              <img src="img/Hitachi.jpg" width="169" height="31" alt="HITACHI">
             </a>
           </li>
           <li class="popular-brands-item">
             <a href="#">
-              <img src="http://placehold.it/121x73" width="121" height="73" alt="LG">
+              <img src="img/LG.jpg" width="121" height="73" alt="LG">
             </a>
           </li>
           <li class="popular-brands-item">
             <a href="#">
-              <img src="http://placehold.it/151x96" width="151" height="96" alt="AEG">
+              <img src="img/AEG.jpg" width="151" height="96" alt="AEG">
             </a>
           </li>
           <li class="popular-brands-item">
             <a href="#">
-              <img src="http://placehold.it/204x69" width="204" height="69" alt="Metabo">
+              <img src="img/Metabo.jpg" width="204" height="69" alt="Metabo">
             </a>
           </li>
         </ul>
@@ -214,7 +214,7 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами,
             заехав в наш офис:</p>
-          <img src="http://placehold.it/300x158" width="300" height="158" alt="Расположение компании «Техномарт»">
+          <img src="img/minimap.png" width="300" height="158" alt="Расположение компании «Техномарт»">
           <a href="#" class="button">Заблудились? Напишите нам!</a>
         </div>
       </section>
