--- a/catalog.html
+++ b/catalog.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог Техномарта</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="main-header-top">
-        <a href="index.html" class="logo header-logo">Техномарт</a>
+        <a href="index.html" class="logo header-logo"><img src="img/logo-top.png" width="220" height="47" alt="Логотип Техномарта"></a>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
           <input type="search" class="search-field" name="search" value="Поиск">
         </form>
@@ -73,19 +76,19 @@
             <label><input type="radio" name="power-supply" value="accumulator" checked>Аккумуляторные</label>
             <label><input type="radio" name="power-supply" value="cable">Сетевые</label>
           </fieldset>
-          <input type="submit" value="Показать"> 
+          <button type="submit">Показать</button> 
         </form>
       </section>
       <section class="catalog">
         <div class="sorting">
           <h2 class="sorting-title">Сортировка:</h2>
           <ul class="sorting-list">
-            <li class="sorting-item sorting-item-active"><button class="sorting-button sorting-button-price" type="button">По цене</button></li>
-            <li class="sorting-item"><button class="sorting-button sorting-button-type" type="button">По типу</button></li>
-            <li class="sorting-item"><button class="sorting-button sorting-button-functions" type="button">По функционалу</button></li>
+            <li class="sorting-item sorting-item-active"><a href="#" class="sorting-link sorting-link-price">По цене</a></li>
+            <li class="sorting-item"><a href="#" class="sorting-link sorting-link-type">По типу</a></li>
+            <li class="sorting-item"><a href="#" class="sorting-link sorting-link-functions">По функционалу</a></li>
           </ul>
-          <button class="sorting-button-toggle sorting-min-button active-toggle" type="button" aria-label="Сначала дешевые"></button>
-          <button class="sorting-button-toggle sorting-max-button" type="button" aria-label="Сначала дорогие"></button>
+          <a href="#" class="sorting-toggle sorting-min-toggle active-toggle" aria-label="Сначала дешевые"></a>
+          <a href="#" class="sorting-toggle sorting-max-toggle" aria-label="Сначала дорогие"></a>
         </div>
         <ul class="catalog-list">
           <li class="catalog-list-item">
@@ -176,9 +179,8 @@
       </section>
     </main>
     <footer class="main-footer">
-      <section class="main-footer-top">
-        <h2 class="visually-hidden">Нижнее меню сайта и контактная информация</h2>
-        <span class="logo footer-logo">Техномарт</span>
+      <div class="main-footer-top">
+        <img src="img/logo-bottom.png" width="220" height="68" alt="Логотип Техномарта">
         <p class="main-footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           +7 (812) 555-05-55</p>
           <nav class="main-footer-navigation">
@@ -196,9 +198,8 @@
               <li class="footer-navigation-bottom-item"><a href="#">Спецпредложения</a></li>
             </ul>
           </nav>
-      </section>
-      <section class="main-footer-bottom">
-        <h2 class="visually-hidden">Контактная информация</h2>
+      </div>
+      <div class="main-footer-bottom">
         <p class="main-footer-copyright">© 2010–2019 Компания «Техномарт»
           Все права защищены</p>
         <ul class="social-link-list">
@@ -210,7 +211,7 @@
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
         <p class="main-footer-developer">Разработано —
           <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-      </section>
+      </div>
     </footer>
     <section class="modal modal-confirm">
       <h2 class="visually-hidden">Информация об успешном добавлении товара в корзину</h2>
