--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="main-header-top">
-        <a href="#" class="logo header-logo">Техномарт</a>
+        <a href="#" class="logo header-logo"><img src="img/logo-top.png" width="220" height="47" alt="Логотип Техномарта"></a>
         <form class="search-form">
           <input type="search" class="search-field" name="search" value="Поиск">
         </form>
@@ -18,12 +21,12 @@
       <div class="main-header-middle">
         <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         <p class="main-header-contacts">
-          <span>+7 (812) 555-05-55</span>
+          <span class="phone-number">+7 (812) 555-05-55</span>
           <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
         </p>
         <div class="user-authorization">
-          <a href="#" class="button sign-in-button">Войти</a>
-          <a href="#" class="button sign-up-button">Регистрация</a>
+          <a href="#" class="button authorization-button sign-in-button">Войти</a>
+          <a href="#" class="button authorization-button sign-up-button">Регистрация</a>
         </div>
       </div>
       <nav class="main-navigation">
@@ -173,33 +176,33 @@
         <ul class="service-list">
           <li class="service-item">
             <span tabindex="0">Доставка</span>
-            <div class="service-item-delivery">
+            <section class="service-item-delivery">
               <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо
                 к вашему подъезду совершенно бесплатно!
                 Ведь мы неплохо заработаем,
                 поднимая его на ваш этаж!</p>
-            </div>
+            </section>
           </li>
           <li class="service-item">
             <span tabindex="0">Гарантия</span>
-            <div class="service-item-guarantee">
+            <section class="service-item-guarantee">
               <h3>Гарантия</h3>
               <p>Если купленный у нас товар поломается или заискрит,
                 а также в случае пожара, спровоцированного его возгаранием,
                 вы всегда можете быть уверены в нашей гарантии. Мы обменяем
                 сгоревший товар на новый.
                 Дом уж восстановите как-нибудь сами.</p>
-            </div>
+            </section>
           </li>
           <li class="service-item">
             <span tabindex="0">Кредит</span>
-            <div class="service-item-credit">
+            <section class="service-item-credit">
               <h3>Кредит</h3>
               <p>Залезть в долговую яму стало проще!
                 Кредитные консультанты придут вам на помощь.</p>
               <a href="#" class="button credit-request-button">Отправить заявку</a>
-            </div>
+            </section>
           </li>
         </ul>
       </section>
@@ -227,9 +230,8 @@
       </section>
     </main>
     <footer class="main-footer">
-      <section class="main-footer-top">
-        <h2 class="visually-hidden">Нижнее меню сайта</h2>
-        <span class="logo footer-logo">Техномарт</span>
+      <div class="main-footer-top">
+        <img src="img/logo-bottom.png" width="220" height="68" alt="Логотип Техномарта">
         <p class="main-footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           +7 (812) 555-05-55</p>
         <nav class="main-footer-navigation">
@@ -247,9 +249,8 @@
             <li class="footer-navigation-bottom-item"><a href="#">Спецпредложения</a></li>
           </ul>
         </nav>
-      </section>
-      <section class="main-footer-bottom">
-        <h2 class="visually-hidden">Контактная информация</h2>
+      </div>
+      <div class="main-footer-bottom">
         <p class="main-footer-copyright">© 2010–2019 Компания «Техномарт»
           Все права защищены</p>
         <ul class="social-link-list">
@@ -261,7 +262,7 @@
             <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
         <p class="main-footer-developer">Разработано —
           <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-      </section>
+      </div>
     </footer>
     <section class="modal modal-map">
       <h2 class="visually-hidden">Основная карта</h2>
