Finished basic styling of index.html

--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
         </p>
         <div class="user-account">
           <a href="#" class="icon user-account-icon"><span class="visually-hidden">Перейти в личный кабинет</span></a>
-          <a href="#">Равшан Джамшутович</a>
+          <a href="#" class="username">Равшан Джамшутович</a>
           <a href="#" class="icon account-exit-icon"><span class="visually-hidden">Выйти из аккаунта</span></a>
           <a href="#">Мои заказы</a>
           <a href="#">Личный кабинет</a>
