--- a/index.html
+++ b/index.html
@@ -44,37 +44,37 @@
     <main class="container">
       <section class="offers">
         <ul class="offers-list">
-          <li class="offers-item">
+          <li class="offers-item materials-item">
             <h3>Материалы</h3>
             <a href="#" class="button offers-item-button">На любой вкус</a>
           </li>
-          <li class="offers-item">
+          <li class="offers-item instrument-item">
             <h3>Инструмент</h3>
             <a href="#" class="button offers-item-button">На все случаи</a>
           </li>
-          <li class="offers-item">
+          <li class="offers-item technique-item">
             <h3>Техника</h3>
             <a href="#" class="button offers-item-button">Для стройки</a>
           </li>
           <li class="offers-item offers-item-slider">
             <ul class="slider">
-              <li class="slider-item drill">
+              <li class="slider-item slider-item-drill">
                 <h3>Дрели</h3>
                 <span>Соседям на радость!</span>
                 <a href="catalog.html" class="button slider-item-button">Открыть каталог</a>
               </li>
-              <li class="slider-item puncher">
+              <li class="slider-item slider-item-puncher">
                 <h3>Перфораторы</h3>
                 <span>Настоящие мужские игрушки</span>
                 <a href="catalog.html" class="button slider-item-button">Открыть каталог</a>
               </li>
             </ul>
           </li>
-          <li class="offers-item">
+          <li class="offers-item sales-item">
             <h3>Скидки 50%</h3>
             <a href="#" class="button offers-item-button">На 350 товаров</a>
           </li>
-          <li class="offers-item">
+          <li class="offers-item delivery-item">
             <h3>Доставка</h3>
             <a href="#" class="button offers-item-button">Бесплатно</a>
           </li>
@@ -236,17 +236,17 @@
           +7 (812) 555-05-55</p>
         <nav class="main-footer-navigation">
           <ul class="footer-navigation-top">
-            <li class="footer-navigation-top-item"><a href="#">Компания</a></li>
-            <li class="footer-navigation-top-item"><a href="#">Новости</a></li>
-            <li class="footer-navigation-top-item"><a href="catalog.html">Каталог</a></li>
-            <li class="footer-navigation-top-item"><a href="#">Доставка</a></li>
-            <li class="footer-navigation-top-item"><a href="#">Контакты</a></li>
+            <li><a href="#">Компания</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
           <ul class="footer-navigation-bottom">
-            <li class="footer-navigation-bottom-item"><a href="#">Материалы</a></li>
-            <li class="footer-navigation-bottom-item"><a href="#">Техника</a></li>
-            <li class="footer-navigation-bottom-item"><a href="#">Инструмент</a></li>
-            <li class="footer-navigation-bottom-item"><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Материалы</a></li>
+            <li><a href="#">Техника</a></li>
+            <li><a href="#">Инструмент</a></li>
+            <li><a href="#">Спецпредложения</a></li>
           </ul>
         </nav>
       </div>
@@ -254,9 +254,9 @@
         <p class="main-footer-copyright">© 2010–2019 Компания «Техномарт»
           Все права защищены</p>
         <ul class="social-link-list">
-          <li class="social-link-item social-link-vk"><a href="vk.com/technomart">VK</a></li>
-          <li class="social-link-item social-link-facebook"><a href="fb.com/technomart">Fb</a></li>
-          <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart">Insta</a></li>
+          <li class="social-link-item social-link-vk"><a href="vk.com/technomart"></a></li>
+          <li class="social-link-item social-link-facebook"><a href="fb.com/technomart"></a></li>
+          <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart"></a></li>
         </ul>
         <p class="main-footer-email">Обратная связь:
             <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
