Styling of catalog.html is started. Finished styling of user-autorization block

--- a/catalog.html
+++ b/catalog.html
@@ -31,9 +31,11 @@
           <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
         </p>
         <div class="user-account">
-          <a href="#" class="icon user-account-icon"><span class="visually-hidden">Перейти в личный кабинет</span></a>
-          <a href="#" class="username">Равшан Джамшутович</a>
-          <a href="#" class="icon account-exit-icon"><span class="visually-hidden">Выйти из аккаунта</span></a>
+          <div class="account-management">
+            <a href="#" class="user-icon user-account-icon"><span class="visually-hidden">Перейти в личный кабинет</span></a>
+            <a href="#" class="username">Равшан Джамшутович</a>
+            <a href="#" class="user-icon account-exit-icon"><span class="visually-hidden">Выйти из аккаунта</span></a>
+          </div>
           <a href="#">Мои заказы</a>
           <a href="#">Личный кабинет</a>
         </div>
